# cse208_project

./: .gitignore  CMakeLists.txt  Python_logistic_regression.ipynb  README.md  cosine_similarity.cpp  example.csv  knn.cpp  knn_acc.py  knn_driver.py  knn_plot.py  linear_algebra_utils.h  logisticreg.cpp  output_16D.txt  output_2D.txt  output_32D.txt  output_4D.txt  output_8D.txt  rapidcsv.h  results.csv  results_16D.txt  results_2D.txt  results_32D.txt  results_4D.txt  results_8D.txt  results_ks.csv  scratch.py  test_data_16D.txt  test_data_2D.txt  test_data_32D.txt  test_data_4D.txt  test_data_8D.txt  weights_16D.txt  weights_2D.txt  weights_32D.txt  weights_4D.txt  weights_8D.txt
.artifacts/: 1.initial.graph.txt  2.after-fusing.graph.txt  3.after-fusing.graph.txt  4.final.graph.txt  bounds.txt  environment.txt  function.txt  parameters.txt  requirements.txt  traceback.txt
.ipynb_checkpoints/: Python_logistic_regression-checkpoint.ipynb
knn_data/: example_128.csv  example_16.csv  example_256.csv  example_32.csv  example_512.csv  example_64.csv
